--- a/Invenietis.Database/packages.config
+++ b/Invenietis.Database/packages.config
@@ -5,4 +5,7 @@
   <package id="CK.SqlServer.Core" version="4.0.0" targetFramework="net451" />
   <package id="CK.SqlServer.Setup.Model" version="4.0.0" targetFramework="net451" />
   <package id="CK.StObj.Model" version="4.0.0" targetFramework="net451" />
+  <package id="linq2db" version="1.0.7.3" targetFramework="net451" />
+  <package id="linq2db.SqlServer" version="1.0.7.3" targetFramework="net451" />
+  <package id="linq2db.t4models" version="1.0.7.1" targetFramework="net451" />
 </packages>
