--- a/Invenietis.Web/project.json
+++ b/Invenietis.Web/project.json
@@ -5,8 +5,11 @@
   },
 
   "dependencies": {
+    "Invenietis.Common": "1.0.0-*",
+    "Invenietis.Data": "1.0.0-*",
     "Invenietis.LocalizedRoutes": "0.0.0",
     "Invenietis.LocalizedRoutes.Mvc": "0.0.0",
+    "Invenietis.Repositories": "1.0.0-*",
     "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
