--- a/Invenietis.Back/package.json
+++ b/Invenietis.Back/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-resource": "^1.5.5",
-    "angular-ui-router": "^0.2.18",    
+    "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.3",
     "lightbox2": "^2.8.2",
@@ -14,8 +14,8 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-	"gulp": "^3.9.1",
-	"gulp-bundle-aspnet": "^0.3.0",
+    "gulp": "^3.9.1",
+    "gulp-bundle-aspnet": "^0.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-plumber": "^1.1.0",
@@ -25,8 +25,8 @@
     "gulp-run-sequence": "^0.3.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-	"rimraf": "^2.5.2",
-    "through2": "^2.0.1",
+    "rimraf": "^2.5.2",
+    "through2": "^2.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
